[package]
name = "cortical-io"
version = "0.1.2"
edition = "2021"
description = "Cortical.io API client"
license = "MIT"
repository = "https://github.com/19h/cortical-io-rs"

[lib]
name = "cortical_io"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "gzip"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
