[package]
name = "cortical-io"
version = "0.1.13"
edition = "2021"
description = "Cortical.io API client"
license = "MIT"
repository = "https://github.com/19h/cortical-io-rs"

[[example]]
name = "cortical"
path = "src/cortical.rs"

[features]
default = ["image", "client"]
image = ["dep:image", "dep:rayon"]
client = ["dep:reqwest"]

[lib]
name = "cortical_io"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
num = "0.4.0"
num-traits = "0.2.15"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }

[dependencies.image]
version = "0.24.5"
optional = true

[dependencies.rayon]
version = "1.6.0"
optional = true

[dependencies.reqwest]
version = "^0.11.13"
features = ["json", "gzip"]
optional = true
